Fix sidebar's min-width on Safari

--- a/styles/workspace.less
+++ b/styles/workspace.less
@@ -53,6 +53,7 @@
   @mt-book: ~"[data-media-type='application/vnd.org.cnx.collection']";
 
   -webkit-flex: 0 1 20em;
+  min-width: 20em;
 
   padding: 1em;
   border-right: 1px solid #ccc;
